@@ -1,3 +1,15 @@
+2006-12-29  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa.rb,
+	  src/rbosa.c:
+	- Made the UTF8 strings optional and disabled by default ;
+	- Fixed the TIFF conversion to OSA ;
+	- Handle application errors and convert them as Ruby exceptions.
+
+	* sample/iTunes_control.rb,
+	  sample/iTunes_inspect.rb:
+	Activate UTF8 strings.
+
 2006-12-27  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* NEWS:
